Only unset :hover in NotifyMouseOut if we're not mousing over anything. Otherwise, let NotifyMouseOver handle changing :hover; it's faster that way.  Bug 292472, r+sr=roc, a=dbaron